<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="20dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cotacao_atual" />
    <TextView
        android:id="@+id/txt_cotacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/valor_cotacao_zero"/>
    <ImageView
        android:id="@+id/img_atualizar"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/atualizar_cotacao"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_search"
        android:clickable="true" />


</LinearLayout>